// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBanner renders correct snapshot 1`] = `
<WithStyles(ForwardRef(CardContent))>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <WithStyles(ForwardRef(Icon))
      className="DescribeElementCardBanner-icon-3"
    >
      people
    </WithStyles(ForwardRef(Icon))>
    <WithStyles(ForwardRef(Typography))
      className="DescribeElementCardBanner-cardTitle-1"
      variant="h5"
    >
      expectedTitle
    </WithStyles(ForwardRef(Typography))>
  </div>
</WithStyles(ForwardRef(CardContent))>
`;

exports[`DescribeElementCardBanner renders correct snapshot with switches 1`] = `
<WithStyles(ForwardRef(CardContent))>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <WithStyles(ForwardRef(Typography))
      className="DescribeElementCardBanner-tallCardTitle-2"
      variant="h5"
    >
      expectedTitle
    </WithStyles(ForwardRef(Typography))>
  </div>
</WithStyles(ForwardRef(CardContent))>
`;
